added the date methods on the script file to make the clock functional

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
       <div class="main">
         <center>
           <div class="clock">
-            <span>02:</span>
-            <span>02:</span>
-            <span>02</span>
+            <span id="hour"></span>
+            <span id="minute"></span>
+            <span id="second"></span>
           </div>
         </center>
       </div>
+
+      <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
